[gd_scene load_steps=43 format=3 uid="uid://b61fsyov1dmnu"]

[ext_resource type="Script" path="res://Player/Scripts/player.gd" id="1_c34kv"]
[ext_resource type="Texture2D" uid="uid://bemcgj3aba7c0" path="res://Player/Sprites/PlayerSprite02.png" id="2_ri25b"]
[ext_resource type="Script" path="res://Player/Scripts/player_state_machine.gd" id="3_2opom"]
[ext_resource type="Texture2D" uid="uid://c4aht1un3ojhj" path="res://Player/Sprites/AttackSprite01.png" id="3_63if4"]
[ext_resource type="Script" path="res://Player/Scripts/state_idle.gd" id="4_7ab88"]
[ext_resource type="Texture2D" uid="uid://cq4kxcrqv3ewq" path="res://_DownloadedAssets/Shadow.png" id="4_t5sp2"]
[ext_resource type="Script" path="res://Player/Scripts/state_walk.gd" id="5_i1400"]
[ext_resource type="Script" path="res://Player/Scripts/state_attack.gd" id="6_stogy"]
[ext_resource type="AudioStream" uid="uid://dnu3jbht3dajw" path="res://_DownloadedAssets/SwordSwoosh.wav" id="8_umib7"]
[ext_resource type="PackedScene" uid="uid://du1gjr20r7681" path="res://GeneralNodes/HurtBox/hurt_box.tscn" id="10_kq57w"]
[ext_resource type="Script" path="res://Player/Scripts/player_interactions_host.gd" id="10_qtc3n"]
[ext_resource type="Script" path="res://Player/Scripts/state_stun.gd" id="11_hhp8t"]
[ext_resource type="Script" path="res://Player/Scripts/player_camera.gd" id="11_k8hc3"]
[ext_resource type="PackedScene" uid="uid://c64qyifapks48" path="res://GeneralNodes/HitBox/hit_box.tscn" id="13_c2u8r"]
[ext_resource type="AudioStream" uid="uid://ba3p2nq7pvavo" path="res://Player/Sounds/hit_player.wav" id="14_26f4t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fniij"]

[sub_resource type="Animation" id="Animation_bqyx8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_v7pfb"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_up2y7"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_845oq"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ks280"]
resource_name = "no_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gshvj"]
_data = {
"RESET": SubResource("Animation_bqyx8"),
"attack_down": SubResource("Animation_v7pfb"),
"attack_side": SubResource("Animation_up2y7"),
"attack_up": SubResource("Animation_845oq"),
"no_attack": SubResource("Animation_ks280")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_scrvf"]
radius = 8.0

[sub_resource type="Animation" id="Animation_oenpa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 37)]
}

[sub_resource type="Animation" id="Animation_tpj8g"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [21, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 20)]
}

[sub_resource type="Animation" id="Animation_s2v42"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [27, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 0)]
}

[sub_resource type="Animation" id="Animation_wb31d"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -20)]
}

[sub_resource type="Animation" id="Animation_l6q1t"]
resource_name = "idle_down"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_a1yrf"]
resource_name = "idle_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 8]
}

[sub_resource type="Animation" id="Animation_a30mb"]
resource_name = "idle_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3, 5]
}

[sub_resource type="Animation" id="Animation_3cgaw"]
resource_name = "stun_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [30]
}

[sub_resource type="Animation" id="Animation_ghosj"]
resource_name = "stun_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [32]
}

[sub_resource type="Animation" id="Animation_myhww"]
resource_name = "stun_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [31]
}

[sub_resource type="Animation" id="Animation_hr6ul"]
resource_name = "walk_down"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [9, 12]
}

[sub_resource type="Animation" id="Animation_et31c"]
resource_name = "walk_side"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [17, 20]
}

[sub_resource type="Animation" id="Animation_mlfuc"]
resource_name = "walk_up"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [13, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qg7d3"]
_data = {
"RESET": SubResource("Animation_oenpa"),
"attack_down": SubResource("Animation_tpj8g"),
"attack_side": SubResource("Animation_s2v42"),
"attack_up": SubResource("Animation_wb31d"),
"idle_down": SubResource("Animation_l6q1t"),
"idle_side": SubResource("Animation_a1yrf"),
"idle_up": SubResource("Animation_a30mb"),
"stun_down": SubResource("Animation_3cgaw"),
"stun_side": SubResource("Animation_ghosj"),
"stun_up": SubResource("Animation_myhww"),
"walk_down": SubResource("Animation_hr6ul"),
"walk_side": SubResource("Animation_et31c"),
"walk_up": SubResource("Animation_mlfuc")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_dbraw"]

[sub_resource type="Animation" id="Animation_l5o65"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%AttackHurtBox/../..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rmqku"]
resource_name = "damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%AttackHurtBox/../..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.235294), Color(1, 1, 1, 1), Color(1, 1, 1, 0.415686), Color(1, 1, 1, 1), Color(1, 1, 1, 0.611765), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%AttackHurtBox/../../Sounds/AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.000677604,
"start_offset": 0.0,
"stream": ExtResource("14_26f4t")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_xq7oa"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%AttackHurtBox/../..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8sdfm"]
_data = {
"RESET": SubResource("Animation_l5o65"),
"damaged": SubResource("Animation_rmqku"),
"default": SubResource("Animation_xq7oa")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 16
motion_mode = 1
wall_min_slide_angle = 0.174533
script = ExtResource("1_c34kv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_fniij")
debug_color = Color(0, 0.65063, 0.0794052, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -21)
texture = ExtResource("2_ri25b")
hframes = 16
vframes = 3

[node name="ShadowSprite" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0, 0, 0, 0.223529)
show_behind_parent = true
position = Vector2(0, 19)
texture = ExtResource("4_t5sp2")

[node name="AttackEffectSprite" type="Sprite2D" parent="Sprite2D"]
position = Vector2(0, 12)
texture = ExtResource("3_63if4")
hframes = 12
frame = 1

[node name="AttackEffectAnimationPlayer" type="AnimationPlayer" parent="Sprite2D/AttackEffectSprite"]
libraries = {
"": SubResource("AnimationLibrary_gshvj")
}
autoplay = "no_attack"

[node name="AttackHurtBox" parent="Sprite2D" instance=ExtResource("10_kq57w")]
unique_name_in_owner = true
position = Vector2(0, 37)
collision_mask = 256
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/AttackHurtBox"]
shape = SubResource("CapsuleShape2D_scrvf")
debug_color = Color(0.997828, 0, 0.157054, 0.42)

[node name="SpriteAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qg7d3")
}
autoplay = "idle_down"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_2opom")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_7ab88")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_i1400")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("6_stogy")
attack_sound = ExtResource("8_umib7")
decelerate_speed = 17.5

[node name="Stun" type="Node" parent="StateMachine"]
script = ExtResource("11_hhp8t")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("11_k8hc3")

[node name="Sounds" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sounds"]
max_polyphony = 6
bus = &"SFX"

[node name="Interactions" type="Node2D" parent="."]
script = ExtResource("10_qtc3n")

[node name="HitBox" parent="." instance=ExtResource("13_c2u8r")]
position = Vector2(0, -8)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_dbraw")

[node name="EffectAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D/AttackHurtBox")
libraries = {
"": SubResource("AnimationLibrary_8sdfm")
}
